--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "test:unit": "jest",
-    "test:watch": "npm run jest -- --watch",
-    "test": "npm run lint && npm run test:unit",
+    "test:watch": " jest --watch",
+    "test": " npm run test:unit",
+    "start": "ts-node src/index.ts",
     "watch": "nodemon",
     "build": "tsc",
     "prepublishOnly": "npm run test && npm run build"
